# IcyHotPrevention

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
MarketPulse/: project.yml
MarketPulse/MarketPulse/: MarketPulse.entitlements
MarketPulse/MarketPulse/App/: AppDependencyContainer.swift  MarketPulseApp.swift
MarketPulse/MarketPulse/Core/Errors/: MarketPulseError.swift
MarketPulse/MarketPulse/Core/Extensions/: Date+Formatting.swift  Double+Financial.swift  String+CSV.swift
MarketPulse/MarketPulse/Core/Networking/: HTTPClient.swift  RateLimiter.swift
MarketPulse/MarketPulse/Core/Persistence/: CacheManager.swift  KeychainManager.swift
MarketPulse/MarketPulse/Core/Utilities/: CSVParser.swift  DateParser.swift
MarketPulse/MarketPulse/Data/DTOs/: FinnhubCompanyDTO.swift  FinnhubInsiderDTO.swift  FinnhubNewsDTO.swift  FinnhubQuoteDTO.swift  FinvizNewsDTO.swift  FinvizPortfolioDTO.swift
MarketPulse/MarketPulse/Data/DataSources/: DataSourceProtocol.swift  FinnhubDataSource.swift  FinvizDataSource.swift
MarketPulse/MarketPulse/Data/Mappers/: FinnhubMapper.swift  FinvizMapper.swift
MarketPulse/MarketPulse/Data/Repositories/: MarketDataRepository.swift  NewsRepository.swift  PortfolioRepository.swift
MarketPulse/MarketPulse/Domain/AI/: AppleIntelligenceSummaryProvider.swift  ClaudeAPISummaryProvider.swift  PromptTemplates.swift  SummaryProviderProtocol.swift
MarketPulse/MarketPulse/Domain/Models/: IndexSnapshot.swift  KeyTicker.swift  MarketMover.swift  MarketScan.swift  MarketSentiment.swift  NewsItem.swift  QuickTake.swift  SectorRotation.swift  VolumeSignal.swift  WatchItem.swift
MarketPulse/MarketPulse/Domain/UseCases/: AnalyzeSectorRotationUseCase.swift  (+6 more)
MarketPulse/MarketPulse/Intents/: MarketPulseShortcuts.swift  TickerLookupIntent.swift  TickerLookupShortcutProvider.swift
docker/: docker-compose.yml
docker/postgres/: init.sql
docs/: website-design-concept.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: connected-chips.tsx  flight-map-placeholder.tsx  nav.tsx  source-badge.tsx  stat-card.tsx
migrations/: env.py
migrations/versions/: 001_create_schemas.py  002_usaspending_tables.py  003_sec_tables.py  004_legal_tables.py  005_gdelt_tables.py  006_integration_tables.py  007_flight_tracking_tables.py
src/iety/: __init__.py  config.py
src/iety/agents/: __init__.py  base.py  orchestrator.py
src/iety/cli/: __init__.py  dashboard.py  main.py
src/iety/cost/: __init__.py  circuit_breaker.py  rate_limiter.py  tracker.py
src/iety/db/: __init__.py  engine.py
src/iety/ingestion/: __init__.py  base.py
src/iety/processing/: __init__.py  chunking.py  embeddings.py  entity_resolution.py  search.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_chunking.py  test_circuit_breaker.py  test_memory_store.py  test_opensky.py  test_rate_limiter.py
(+52 files in other folders)
